umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@atoms_al.snap
---
source: umol-models-graph/tests/resolution/mod.rs
expression: edn_to_string(&results).unwrap()
---
{:atom-typing {:success true :output {:atoms {"0" "Al#n#u"} :bonds [] :charge 0 :spin "#u1 #s2"}} :counts {:success true :output {:atoms {"0" "Al#n#u"} :bonds [] :charge 0 :spin "#u1 #s2"}}}
