umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@atoms_ar.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: "results.to_edn().to_string_with(&FormatConfig::default())"
---
{
  :atom-typing {:output {:atoms ["Ar"] :bonds []} :success true}
  :counts {:output {:atoms ["Ar"] :bonds []} :success true}}
