umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@atoms_as.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: "results.to_edn().to_string_with(&FormatConfig::default())"
---
{
  :atom-typing {:output {:atoms ["As#n#u3"] :bonds []} :success true}
  :counts {:output {:atoms ["As#n2#u"] :bonds []} :success true}}
