umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@atoms_at.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: "results.to_edn().to_string_with(&FormatConfig::default())"
---
{
  :atom-typing {:output {:atoms ["At#n3#u"] :bonds []} :success true}
  :counts {:output {:atoms ["At#n3#u"] :bonds []} :success true}}
