umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@atoms_au.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: edn_to_string_pretty(&results).unwrap()
---
{
  :atom-typing {
    :output {:atoms ["Au#n5#u"] :bonds [] :charge 0 :spin "#u1#s2"}
    :success true}
  :counts {
    :output {:atoms ["Au#n5#u"] :bonds [] :charge 0 :spin "#u1#s2"}
    :success true}}
