umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@atoms_bh.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: "results.to_edn().to_string_with(&FormatConfig::default())"
---
{
  :atom-typing {:output {:atoms ["Bh#n#u5"] :bonds []} :success true}
  :counts {:output {:atoms ["Bh#n3#u"] :bonds []} :success true}}
