umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@atoms_bk.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: "results.to_edn().to_string_with(&FormatConfig::default())"
---
{
  :atom-typing {:output {:atoms ["Bk#n3#u5"] :bonds []} :success true}
  :counts {:output {:atoms ["Bk#n5#u"] :bonds []} :success true}}
